[package]
name = "sni-spoof-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android-activity = "0.6"
log = "0.4"
android_logger = "0.13"
tokio = { version = "1", features = ["full"] }
byteorder = "1"
rand = "0.8"

[package.metadata.android]
package_name = "com.snispoof.android"
min_sdk_version = 23
target_sdk_version = 30
